# sindhai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/api/sindhai_api/: config.py  dependencies.py  embedding.py  parsing.py  util.py  vault.py
apps/api/sindhai_api/ai/: openai_compat.py  providers.py
apps/api/sindhai_api/domain/: entities.py  exceptions.py  ports.py  schemas.py
apps/api/sindhai_api/indexing/: graph.py  indexer.py  vector.py
apps/api/sindhai_api/infrastructure/persistence/: file_vault.py
apps/api/sindhai_api/interface/api/: routes.py
apps/api/tests/: test_api_ai_endpoints.py  test_indexer_indexing_rules.py  test_integrations_external_guardrails.py  test_parsing.py  test_security_middleware.py  test_vault_note_model.py  test_vault_paths.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs
docs/: README.md
docs/agents/: using-coding-agents.md
docs/architecture/: 00-overview.md  01-tech-stack.md  02-data-model.md  03-api-contracts.md  04-ai-services.md  05-frontend.md  06-sync-and-import.md  07-security-privacy.md  08-scalability-offline.md  09-containerization.md
docs/decisions/: 0000-template.md  0001-note-identity-sidecar-index.md  0002-tags-as-note-property.md  0003-embedding-baseline-hashed-bow.md  0004-openai-ai-writing-server-side-only.md  README.md
docs/plans/: 02-issue-seeds.md  (+3 more)
infra/: docker-compose.dev.yml  docker-compose.yml
(+31 files in other folders)
